<resources>
    <string name="app_name">Orgs</string>
    <string name="app_name_usuario">Orgs (%s)</string>
    <string name="app_formulario_produtos_title">Cadastrar produto</string>
    <string name="novo_produto">Novo produto</string>
    <string name="botao_carregar_imagem">Carregar</string>
    <string name="formulario_produto_error_nome">⚠️ O campo nome é obrigatório!</string>
    <string name="formulario_produto_error_descricao">⚠️ O campo descrição é obrigatório!</string>
    <string name="formulario_produto_error_valor">⚠️ O campo valor é obrigatório!</string>
    <string name="formulario_usuario_error_nome">⚠️ O campo nome é obrigatório!</string>
    <string name="formulario_usuario_error_usuario">⚠️ O campo usuário é obrigatório!</string>
    <string name="formulario_usuario_error_senha">⚠️ O campo senha é obrigatório e deve ter mais de 6 caractéres!</string>
    <string name="login_usuario_error_usuario">⚠️ O campo usuário é obrigatório!</string>
    <string name="login_usuario_error_senha">⚠️ O campo senha é obrigatório e deve ter mais de 6 caractéres!</string>
    <string name="menu_detalhes_produto_titulo">Detalhes</string>
    <string name="menu_detalhes_produto_botaoeditar">Editar</string>
    <string name="menu_detalhes_produto_botaoremover">Remover</string>
    <string name="menu_lista_produtos_ordenar">Ordenar</string>
    <string name="menu_lista_produtos_ordenar_nome_asc">Nome (ASC)</string>
    <string name="menu_lista_produtos_ordenar_nome_desc">Nome (DESC)</string>
    <string name="menu_lista_produtos_ordenar_descricao_desc">Descrição (DESC)</string>
    <string name="menu_lista_produtos_ordenar_descricao_asc">Descrição (ASC)</string>
    <string name="menu_lista_produtos_ordenar_valor_desc">Valor (DESC)</string>
    <string name="menu_lista_produtos_ordenar_valor_asc">Valor (ASC)</string>
    <string name="menu_lista_produtos_ordenar_sem_ordem">Sem ordem</string>
    <string name="formulario_usuario_usuario">Usuário *</string>
    <string name="formulario_usuario_nome">Nome *</string>
    <string name="formulario_usuario_senha">Senha *</string>
    <string name="formulario_usuario_botao_cadastrar">Cadastrar</string>
    <string name="login_usuario">Usuário *</string>
    <string name="login_senha">Senha *</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_cadastrar_usuario">cadastrar usuário</string>
    <string name="menu_lista_produtos_deslogar">Deslogar</string>
    <string name="menu_lista_produtos_filtrar">Filtrar</string>
    <string name="menu_lista_produtos_filtrar_todos">Todos produtos</string>
    <string name="menu_lista_produtos_filtrar_usuario">Seus produtos</string>
    <string name="item_produto_usuario">(%s)</string>
    <string name="visualizar_produto_inserido_por">Inserido por %s</string>
</resources>