<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lista_produtos_ordenar"
        android:icon="@drawable/ic_action_ordenar"
        android:title="@string/menu_lista_produtos_ordenar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_lista_produtos_ordenar_nome_desc"
                android:title="@string/menu_lista_produtos_ordenar_nome_desc"
                android:icon="@drawable/ic_action_sortdesc"/>
            <item
                android:id="@+id/menu_lista_produtos_ordenar_nome_asc"
                android:title="@string/menu_lista_produtos_ordenar_nome_asc"
                android:icon="@drawable/ic_action_sortasc"
                />
            <item
                android:id="@+id/menu_lista_produtos_ordenar_descricao_desc"
                android:title="@string/menu_lista_produtos_ordenar_descricao_desc"
                android:icon="@drawable/ic_action_sortdesc"/>
            <item
                android:id="@+id/menu_lista_produtos_ordenar_descricao_asc"
                android:title="@string/menu_lista_produtos_ordenar_descricao_asc"
                android:icon="@drawable/ic_action_sortasc"
                />
            <item
                android:id="@+id/menu_lista_produtos_ordenar_valor_desc"
                android:title="@string/menu_lista_produtos_ordenar_valor_desc"
                android:icon="@drawable/ic_action_sortdesc"/>
            <item
                android:id="@+id/menu_lista_produtos_ordenar_valor_asc"
                android:title="@string/menu_lista_produtos_ordenar_valor_asc"
                android:icon="@drawable/ic_action_sortasc"
                />
            <item
                android:id="@+id/menu_lista_produtos_ordenar_sem_ordem"
                android:title="@string/menu_lista_produtos_ordenar_sem_ordem"
                />
        </menu>
    </item>
</menu>